cicd/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: gogs
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs
    namespace: cicd
    resourceVersion: "472917943"
    uid: fdba12e5-c565-40d3-94ac-c169c8162f63
  subsets:
  - addresses:
    - ip: 10.129.17.86
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: gogs-5-7msdj
        namespace: cicd
        resourceVersion: "472917936"
        uid: 4de949c7-5259-413a-bb96-282f3c1a1c8f
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
    - name: 10022-tcp
      port: 10022
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:44Z"
    labels:
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs-postgresql
    namespace: cicd
    resourceVersion: "472917914"
    uid: cf3affae-6b43-4f91-a879-92bd876052f4
  subsets:
  - addresses:
    - ip: 10.129.16.64
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: gogs-postgresql-2-v4lhn
        namespace: cicd
        resourceVersion: "472917910"
        uid: 691a40d3-b55f-4d44-a084-4fc9266b0e1c
    ports:
    - name: postgresql
      port: 5432
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: jenkins-persistent
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins
    namespace: cicd
    resourceVersion: "467404287"
    uid: 81c7ea7f-3cc1-4871-9ba9-f1ea7073b6c5
  subsets:
  - addresses:
    - ip: 10.130.17.49
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: jenkins-6-nc5fn
        namespace: cicd
        resourceVersion: "467404282"
        uid: df72c5cc-59e6-45da-a276-fce4b58df777
    ports:
    - name: web
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: jenkins-persistent
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins-jnlp
    namespace: cicd
    resourceVersion: "467404286"
    uid: 3bdf0410-da0b-4e1c-b4c4-07b79471e246
  subsets:
  - addresses:
    - ip: 10.130.17.49
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: jenkins-6-nc5fn
        namespace: cicd
        resourceVersion: "467404282"
        uid: df72c5cc-59e6-45da-a276-fce4b58df777
    ports:
    - name: agent
      port: 50000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: nexus
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: nexus
    namespace: cicd
    resourceVersion: "467404324"
    uid: 0bbfbcef-439c-4b16-8297-83dd59a6039d
  subsets:
  - addresses:
    - ip: 10.130.16.147
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: nexus-1-lfvsl
        namespace: cicd
        resourceVersion: "467404318"
        uid: c1e7f5a0-b721-4f94-87ed-3a21024cec8c
    ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: postgresql
      chart: postgresql-8.2.0
      heritage: Helm
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-postgresql
    namespace: cicd
    resourceVersion: "467404407"
    uid: 5a78ed41-b82b-4689-8678-2c95397fe098
  subsets:
  - addresses:
    - ip: 10.130.16.227
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: sonarqube-postgresql-0
        namespace: cicd
        resourceVersion: "467404397"
        uid: 17082224-271f-45f4-90c9-3394bf91d712
    ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: postgresql
      chart: postgresql-8.2.0
      heritage: Helm
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-postgresql-headless
    namespace: cicd
    resourceVersion: "467404405"
    uid: 4fd4409e-eb99-4d36-b740-b2b0425c2b88
  subsets:
  - addresses:
    - hostname: sonarqube-postgresql-0
      ip: 10.130.16.227
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: sonarqube-postgresql-0
        namespace: cicd
        resourceVersion: "467404397"
        uid: 17082224-271f-45f4-90c9-3394bf91d712
    ports:
    - name: tcp-postgresql
      port: 5432
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-03T20:16:45Z"
    labels:
      app: sonarqube
      chart: sonarqube-4.0.1
      heritage: Helm
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-sonarqube
    namespace: cicd
    resourceVersion: "472847099"
    uid: f6341e29-e9b9-4f3c-b07f-86065a49c11b
  subsets:
  - addresses:
    - ip: 10.128.20.78
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
      targetRef:
        kind: Pod
        name: sonarqube-sonarqube-6659d87655-zxjwq
        namespace: cicd
        resourceVersion: "472847097"
        uid: 5cad1a7f-e570-4c8d-b5d7-8117ec56c7ca
    ports:
    - name: http
      port: 9000
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
