cicd/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.17.86
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: gogs-5-7msdj
      namespace: cicd
      resourceVersion: "472917936"
      uid: 4de949c7-5259-413a-bb96-282f3c1a1c8f
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:49Z"
    generateName: gogs-
    generation: 86
    labels:
      app: gogs
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: gogs
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs-58pvd
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: gogs
      uid: f1a3c847-8b90-4daa-b8d3-077632695e43
    resourceVersion: "472917944"
    uid: 48930834-5b6f-4650-b649-b722a9e98a49
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
  - name: 10022-tcp
    port: 10022
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.16.64
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: gogs-postgresql-2-v4lhn
      namespace: cicd
      resourceVersion: "472917910"
      uid: 691a40d3-b55f-4d44-a084-4fc9266b0e1c
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:49Z"
    generateName: gogs-postgresql-
    generation: 67
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: gogs-postgresql
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs-postgresql-t54wt
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: gogs-postgresql
      uid: 394daf9f-f494-4cf5-b446-95bb402d2c20
    resourceVersion: "472917915"
    uid: f0b26f2e-0a1f-41de-aae8-50bd830f06f9
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.17.49
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: jenkins-6-nc5fn
      namespace: cicd
      resourceVersion: "467404282"
      uid: df72c5cc-59e6-45da-a276-fce4b58df777
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:49Z"
    generateName: jenkins-jnlp-
    generation: 100
    labels:
      app: jenkins-persistent
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: jenkins-jnlp
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins-jnlp-j2s8c
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: jenkins-jnlp
      uid: d16c5947-fd42-4697-a8a5-2685f38614d0
    resourceVersion: "467404288"
    uid: b6372a1e-1f2d-4ad9-acbc-9ddc493bd81e
  ports:
  - name: agent
    port: 50000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.17.49
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: jenkins-6-nc5fn
      namespace: cicd
      resourceVersion: "467404282"
      uid: df72c5cc-59e6-45da-a276-fce4b58df777
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:49Z"
    generateName: jenkins-
    generation: 100
    labels:
      app: jenkins-persistent
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: jenkins
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins-kpsr4
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: jenkins
      uid: b969d0f1-25c1-41ab-9167-79a9b25414ba
    resourceVersion: "467404285"
    uid: 201a091a-7fbe-45bd-95f2-a198e774e8a0
  ports:
  - name: web
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.147
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: nexus-1-lfvsl
      namespace: cicd
      resourceVersion: "467404318"
      uid: c1e7f5a0-b721-4f94-87ed-3a21024cec8c
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:50Z"
    generateName: nexus-
    generation: 62
    labels:
      app: nexus
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: nexus
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: nexus-8966z
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: nexus
      uid: 82af5469-45b3-4e42-8557-aaa6f91e6634
    resourceVersion: "467404323"
    uid: 6126189f-afb2-4d8b-bf3e-84d0e11e5288
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.227
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: sonarqube-postgresql-0
      namespace: cicd
      resourceVersion: "467404397"
      uid: 17082224-271f-45f4-90c9-3394bf91d712
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:50Z"
    generateName: sonarqube-postgresql-
    generation: 37
    labels:
      app: postgresql
      chart: postgresql-8.2.0
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      heritage: Helm
      kubernetes.io/service-name: sonarqube-postgresql
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-postgresql-2vrqt
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: sonarqube-postgresql
      uid: 6992cf3e-af12-442f-be2b-340b40e54a0d
    resourceVersion: "467404406"
    uid: cef54508-3e71-4acf-b3c4-ab93fb549a73
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.227
    conditions:
      ready: true
      serving: true
      terminating: false
    hostname: sonarqube-postgresql-0
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: sonarqube-postgresql-0
      namespace: cicd
      resourceVersion: "467404397"
      uid: 17082224-271f-45f4-90c9-3394bf91d712
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:50Z"
    generateName: sonarqube-postgresql-headless-
    generation: 37
    labels:
      app: postgresql
      chart: postgresql-8.2.0
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      heritage: Helm
      kubernetes.io/service-name: sonarqube-postgresql-headless
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-postgresql-headless-9l2sf
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: sonarqube-postgresql-headless
      uid: a66a193a-727f-440c-9dd9-6466ac069255
    resourceVersion: "467404404"
    uid: 065dba2e-8de8-48e9-81b5-aabe829036be
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.128.20.78
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth2-xbz5z
    targetRef:
      kind: Pod
      name: sonarqube-sonarqube-6659d87655-zxjwq
      namespace: cicd
      resourceVersion: "472847097"
      uid: 5cad1a7f-e570-4c8d-b5d7-8117ec56c7ca
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-03T20:16:50Z"
    generateName: sonarqube-sonarqube-
    generation: 28
    labels:
      app: sonarqube
      chart: sonarqube-4.0.1
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      heritage: Helm
      kubernetes.io/service-name: sonarqube-sonarqube
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-sonarqube-rxlj2
    namespace: cicd
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: sonarqube-sonarqube
      uid: f403b8c5-fc8a-4063-b70e-e83d4ff1865a
    resourceVersion: "472847100"
    uid: 182f1527-219b-44ce-b117-dcfe574fe6c8
  ports:
  - name: http
    port: 9000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
