cicd/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      description: Route for application's http service.
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-06-03T20:16:48Z"
    labels:
      app: gogs
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs
    namespace: cicd
    resourceVersion: "19235100"
    uid: 383cf11b-23c6-4604-ae41-1496be6e3519
  spec:
    host: gogs-cicd.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: gogs
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-03T20:16:49Z"
        status: "True"
        type: Admitted
      host: gogs-cicd.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-10-11T15:14:30Z"
    labels:
      app: gogs
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs-2
    namespace: cicd
    resourceVersion: "131892165"
    uid: cf452f16-9a8a-4d6b-9255-2bafb4f44bc3
  spec:
    host: gogs-cicd.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: gogs
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-10-11T15:14:30Z"
        status: "True"
        type: Admitted
      host: gogs-cicd.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      description: Route for application's ssh service.
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-06-03T20:16:48Z"
    labels:
      app: gogs
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: gogs-ssh
    namespace: cicd
    resourceVersion: "19235095"
    uid: 8eb12364-da2a-4332-ba6b-729716521d3e
  spec:
    host: securegogs-cicd.api-cloud.dirtrab.cl
    port:
      targetPort: 10022-tcp
    to:
      kind: Service
      name: gogs
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-03T20:16:48Z"
        status: "True"
        type: Admitted
      host: securegogs-cicd.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T21:04:56Z"
    labels:
      app: jenkins-persistent
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins
    namespace: cicd
    resourceVersion: "94926255"
    uid: c375d73d-2857-4972-b78f-f07d27e3db34
  spec:
    host: jenkins-cicd.api-cloud.dirtrab.cl
    port:
      targetPort: web
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIHFTCCBf2gAwIBAgIQJ69/oxneMulfHYlPCI6XLjANBgkqhkiG9w0BAQsFADCB
[...]
        D4X8GvQ/H6dqdtRx7fLRWJO0qg+U5uQOo/DeZEzg7LGJzpxsGazQj9k=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: jenkins
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T21:04:56Z"
        status: "True"
        type: Admitted
      host: jenkins-cicd.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-07-04T21:20:14Z"
    labels:
      app: jenkins-persistent
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      template: jenkins-persistent-template
      template.openshift.io/template-instance-owner: f8bb2d3d-5894-11ea-bff7-000d3ac052bc
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: jenkins-ocp4
    namespace: cicd
    resourceVersion: "45912466"
    uid: 9955e4f7-d334-489e-bda3-50ede3c1d320
  spec:
    host: jenkins-cicd.apps.ocp4azu.dirtrab.cl
    port:
      targetPort: web
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: jenkins
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-07-04T21:20:14Z"
        status: "True"
        type: Admitted
      host: jenkins-cicd.apps.ocp4azu.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-10-17T13:11:59Z"
    labels:
      app: nexus
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: nexus-tmp
    namespace: cicd
    resourceVersion: "137153591"
    uid: 209a3ae3-6125-408b-9480-d0285e9d0231
  spec:
    host: nexus-tmp-cicd.api-cloud.dirtrab.cl
    port:
      targetPort: 8081-tcp
    to:
      kind: Service
      name: nexus
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-10-17T13:11:59Z"
        status: "True"
        type: Admitted
      host: nexus-tmp-cicd.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-06-03T20:16:49Z"
    labels:
      app: sonarqube
      chart: sonarqube-4.0.1
      heritage: Helm
      migration.openshift.io/migrated-by-migmigration: 4066e18a-7c09-4930-a1fd-19e7058b887b
      migration.openshift.io/migrated-by-migplan: adcc6565-a1ee-4eee-a8d6-19a7e8841033
      release: sonarqube
      velero.io/backup-name: migration-85fa4-initial-h496m
      velero.io/restore-name: migration-85fa4-final-wmd58
    name: sonarqube-sonarqube
    namespace: cicd
    resourceVersion: "19235109"
    uid: 09fd0c8a-3b7b-4544-9bcf-c0d75f69e100
  spec:
    host: sonarqube-cicd.api-cloud.dirtrab.cl
    port:
      targetPort: http
    to:
      kind: Service
      name: sonarqube-sonarqube
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-03T20:16:49Z"
        status: "True"
        type: Admitted
      host: sonarqube-cicd.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
